--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Product index{% endblock %}
 
 {% block body %}
-    <h1>Product index</h1>
+    <h1>Product's List 📝</h1>
 
     <table class="table">
         <thead>
@@ -22,13 +22,7 @@
                 <td>{{ product.price }}</td>
                 <td>{{ product.brand }}</td>
             </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">No items found</td>
-            </tr>
         {% endfor %}
         </tbody>
     </table>
 {% endblock %}
-
-
