FEAT - Handling ID's errors & general improve

--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -22,6 +22,10 @@
                 <td>{{ product.price }}</td>
                 <td>{{ product.brand }}</td>
             </tr>
+        {% else %}
+            <tr>
+                <td colspan="5">no records found</td>
+            </tr>
         {% endfor %}
         </tbody>
     </table>
